--- a/exam05.html
+++ b/exam05.html
@@ -6,12 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    body {
-      display: flex;
-      justify-content: center;
-    }
     table {
       width: 800px;
+      margin: 0 auto;
     }
     table, td, th {
       border: 1px solid black;
