--- a/exam04.html
+++ b/exam04.html
@@ -6,21 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #page { width: 600px; margin: 0 auto;}
+        #page { 
+            width: 600px; margin: 0 auto;
+        }
         #page div{
             display: inline-block;
             color: white;
-            width: 80px; height: 80px; 
+            width: 80px; 
+            height: 80px; 
             line-height: 80px;
             text-align: center;
         }
-        .red {background-color: red;}
-        .orange {background-color: orange;}
-        .yellow {background-color: yellow;}
-        .green {background-color: green;}
-        .blue {background-color: blue;}
-        .indigo {background-color: indigo;}
-        .purple {background-color: purple;}
+        .red {
+            background-color: red;
+        }
+        .orange {
+            background-color: orange;
+        }
+        .yellow {
+            background-color: yellow;
+        }
+        .green {
+            background-color: green;
+        }
+        .blue {
+            background-color: blue;
+        }
+        .indigo {
+            background-color: indigo;
+        }
+        .purple {
+            background-color: purple;
+        }
         
     </style>
 </head>
