--- a/exam06.html
+++ b/exam06.html
@@ -9,13 +9,14 @@
       border:1px solid #ccc;
       border-collapse: collapse;
     }
-    th, td { padding:10px 20px; }
+    th, td { 
+      padding:10px 20px; 
+    }
   </style>
 </head>
 <body>
   <div id="container">
-    <a href="order.html"><img src="images/tangerines.jpg" alt="레드향"></a>
-    <!-- Do it! 앵커를 사용해 점프하기 -->
+    <img src="images/tangerines.jpg" alt="레드향">
     <ul>
       <li><a href="#info">레드향</a></li>
       <li><a href="#recipe">레드향 샐러드 레시피</a></li>
@@ -23,7 +24,7 @@
     </ul>
 
     <h1 id="info">레드향</h1>
-    <p>껍질에 붉은 빛이 돌아 <b>레드향</b>이라 불린다.</p>
+    <p>껍질에 붉은 빛이 돌아 <strong>레드향</strong>이라 불린다.</p>
     <p>레드향은 <em>한라봉과 귤을 교배</em>한 것으로<br>일반 귤보다 2~3배 크고, 과육이 붉고 통통하다.</p>
     <p>비타민 C와 비타민 P가 풍부해<br> <strong>혈액순환, 감기예방</strong> 등에 좋은 것으로 알려져 있다.</p>
 
