--- a/exam07.html
+++ b/exam07.html
@@ -6,13 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    body {
-      display: flex;
-      justify-content: center;
-    }
     table {
       width: 800px;
       height: 400px;
+      margin: 0 auto;
     }
     table, td, th {
       border: 1px solid black;
