--- a/exam03.html
+++ b/exam03.html
@@ -12,13 +12,13 @@
 </head>
 <body>
   <div id="page">
-    <a href="https://en.wikipedia.org/wiki/Trullo">
+    <a href="https://namu.wiki/w/%ED%8A%B8%EB%A3%A8%EB%A1%9C">
       <img src="./images/pic_trulli.jpg" alt="이탈리아 전통 지붕">
     </a>
-    <a href="https://en.wikipedia.org/wiki/Girl">
+    <a href="https://ko.wikipedia.org/wiki/%EC%86%8C%EB%85%80">
       <img src="./images/img_girl.jpg" alt="소녀">
     </a>
-    <a href="https://en.wikipedia.org/wiki/Chania">
+    <a href="https://ko.wikipedia.org/wiki/%ED%95%98%EB%8B%88%EC%95%84">
       <img src="./images/img_chania.jpg" alt="그리스의 도시">
     </a>
   </div>
