--- a/exam05.html
+++ b/exam05.html
@@ -1,91 +1,60 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    table {
-      width: 800px;
-      margin: 0 auto;
-    }
-    table, td, th {
-      border: 1px solid black;
-      border-collapse: collapse;
-    }
-    td, th {
-      height: 50px;
-    }
-    td {
-      padding-left: 10px;
-    }
-    thead, tfoot {
-      background-color: lightgray;
-    }
-    tbody tr:hover {
-      background-color: #eee;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>선택자</title>
+    <style>
+        #page { 
+          width: 600px;
+          margin: 0 auto; 
+        }
+        #first h1 { 
+          color: violet; 
+        }
+        #second h1 { 
+          color: deeppink; 
+        }
+        #third h1 { 
+          color: skyblue; 
+        }
+        .big { 
+          font-size: 1.5em;
+        }
+        .green { 
+          color: green;
+        }
+    </style>
 </head>
 <body>
-  <table>
-    <caption>제주특별자치도 학교현황(2015.4.1 기준)</caption>
-    <thead>
-      <tr>
-        <th>구분</th>
-        <th>학교수</th>
-        <th>학급수</th>
-        <th>학생수</th>
-        <th>교원수</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th>유치원</th>
-        <td>117</td>
-        <td>252</td>
-        <td>5,447</td>
-        <td>474</td>
-      </tr>
-      <tr>
-        <th>초등학교</th>
-        <td>111</td>
-        <td>1,720</td>
-        <td>37,686</td>
-        <td>2,632</td>
-      </tr>
-      <tr>
-        <th>중학교</th>
-        <td>44</td>
-        <td>699</td>
-        <td>21,274</td>
-        <td>1,412</td>
-      </tr>
-      <tr>
-        <th>고등학교</th>
-        <td>29</td>
-        <td>676</td>
-        <td>22.019</td>
-        <td>1,433</td>
-      </tr>
-      <tr>
-        <th>특수학교</th>
-        <td>3</td>
-        <td>90</td>
-        <td>428</td>
-        <td>160</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <th>합계</th>
-        <td>300</td>
-        <td>3,437</td>
-        <td>86,954</td>
-        <td>6,111</td>
-      </tr>
-    </tfoot>
-  </table>
+    <div id='page'>
+        <div id='first'>
+            <h1 class='green'>제목1</h1>
+            <p>
+                <span class='big'>뜨</span>고, <span class='green'>청춘</span>은 하여도 앞이 대한 그들은 이상 있는가? 더운지라 앞이 속잎나고, 사람은 충분히 부패뿐이다. 
+                소금이라 무엇이 방황하여도, 곧 있는 관현악이며, 이는 것이다. 부패를 과실이 위하여 인간이 피어나기 되는 끓는다.
+                구할 피고 있는 밝은 아름다우냐? 가는 더운지라 들어 쓸쓸하랴? 
+            </p>
+        </div>
+
+        <div id='second'>
+            <h1>제목2</h1>
+            <p>
+                <span class='big'>설</span>산에서 그들에게 그들은 인생을 인생에 않는 작고 것이다. 황금시대의 석가는 원질이 바이며, 끓는다. 이상의 이상의 있는 그러므로 그들은 칼이다. 
+                가치를 일월과 놀이 피가 못하다 뜨고, 미묘한 살 듣는다. 위하여서 피고 없으면 유소년에게서 품고 눈에 아니다. 얼마나 바이며, 일월과 있는 희망의 구하지 
+                위하여 힘차게 곳이 때문이다. 가치를 사라지지 뜨고, 같이, 보이는 맺어, 장식하는 천지는 작고 것이다. 
+            </p>
+        </div>
+
+        <div id='third'>
+            <h1>제목3</h1>
+            <p>
+                <span class='big'>끝</span>까지 피어나기 있는 청춘의 위하여 생생하며, 풀이 그들은 꽃이 피다. 싹이 수 충분히 사라지지 구하기 것이다. 동력은 인간이 어디 길지 별과 뜨거운지라, 
+                꽃 풀이 철환하였는가? 보내는 이상이 무엇을 것이다. 못할 할지라도 굳세게 용감하고 쓸쓸하랴? 것은 가슴에 할지니, 날카로우나 피다. 
+            </p>
+        </div>
+    </div>
 </body>
 </html>
