--- a/exam06.html
+++ b/exam06.html
@@ -1,89 +1,91 @@
-
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>상품 소개 페이지</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <style>
-    table, th, td {
-      border:1px solid #ccc;
+    table {
+      width: 800px;
+      margin: 0 auto;
+    }
+    table, td, th {
+      border: 1px solid black;
       border-collapse: collapse;
     }
-    th, td { 
-      padding:10px 20px; 
+    td, th {
+      height: 50px;
+    }
+    td {
+      padding-left: 10px;
+    }
+    thead, tfoot {
+      background-color: lightgray;
+    }
+    tbody tr:hover {
+      background-color: #eee;
     }
   </style>
 </head>
 <body>
-  <div id="container">
-    <img src="images/tangerines.jpg" alt="레드향">
-    <ul>
-      <li><a href="#info">레드향</a></li>
-      <li><a href="#recipe">레드향 샐러드 레시피</a></li>
-      <li><a href="#product">상품 구성</a></li>
-    </ul>
-
-    <h1 id="info">레드향</h1>
-    <p>껍질에 붉은 빛이 돌아 <strong>레드향</strong>이라 불린다.</p>
-    <p>레드향은 <em>한라봉과 귤을 교배</em>한 것으로<br>일반 귤보다 2~3배 크고, 과육이 붉고 통통하다.</p>
-    <p>비타민 C와 비타민 P가 풍부해<br> <strong>혈액순환, 감기예방</strong> 등에 좋은 것으로 알려져 있다.</p>
-
-    <h2 id="recipe">레드향 샐러드 레시피</h2>
-    <p><b>재료 : </b>레드향 1개, 아보카도 1개, 토마토 1개, 샐러드 채소 30g</p>
-    <p><b>드레싱 : </b>올리브유 1큰술, 레몬즙 2큰술, 꿀 1큰술, 소금 약간</p>
-    <ol>
-      <li>샐러드 채소를 씻고 물기를 제거한 후 준비합니다.</li>
-      <li>레드향과 아보카도, 토마토를 먹기 좋은 크기를 썰어둡니다.</li>
-      <li>드레싱 재료를 믹서에 갈아줍니다.</li>
-      <li>볼에 샐러드 채소와 썰어 둔 레드향, 아보카도, 토마토를 넣고 드레싱을 뿌리면 끝!</li>
-    </ol>
-    <video src="medias/salad.mp4" controls width="700"></video>
-    
-    <h2 id="product">상품 구성</h2>
-    <table>
-      <caption>선물용과 가정용 상품 구성</caption>
-      <colgroup>
-        <col style="background-color:#eee;">
-        <col>
-        <col span="2" style="width:150px">
-      </colgroup>
-      <thead>
-        <tr>
-          <th>용도</th>
-          <th>중량</th>
-          <th>갯수</t>
-          <th>가격</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td rowspan="2">선물용</td>
-          <td>3kg</td>
-          <td>11~16과</td>
-          <td>35,000원</td>
-        </tr>
-        <tr>
-          <td>5kg</td>
-          <td>18~26과</td>
-          <td>52,000원</td>
-        </tr>
-        <tr>
-          <td rowspan="2">가정용</td>
-          <td>3kg</td>
-          <td>11~16과</td>
-          <td>30,000원</td>
-        </tr>   
-        <tr>
-          <td>5kg</td>
-          <td>18~26과</td>
-          <td>47,000원</td>
-        </tr>
-      </tbody>        
-    </table>
-    <div>     
-      <h2>주문하기</h2>      
-      <p><a href="#">주문서 작성하기</a></p>
-    </div>
-  </div>
+  <table>
+    <caption>제주특별자치도 학교현황(2015.4.1 기준)</caption>
+    <thead>
+      <tr>
+        <th>구분</th>
+        <th>학교수</th>
+        <th>학급수</th>
+        <th>학생수</th>
+        <th>교원수</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>유치원</th>
+        <td>117</td>
+        <td>252</td>
+        <td>5,447</td>
+        <td>474</td>
+      </tr>
+      <tr>
+        <th>초등학교</th>
+        <td>111</td>
+        <td>1,720</td>
+        <td>37,686</td>
+        <td>2,632</td>
+      </tr>
+      <tr>
+        <th>중학교</th>
+        <td>44</td>
+        <td>699</td>
+        <td>21,274</td>
+        <td>1,412</td>
+      </tr>
+      <tr>
+        <th>고등학교</th>
+        <td>29</td>
+        <td>676</td>
+        <td>22.019</td>
+        <td>1,433</td>
+      </tr>
+      <tr>
+        <th>특수학교</th>
+        <td>3</td>
+        <td>90</td>
+        <td>428</td>
+        <td>160</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th>합계</th>
+        <td>300</td>
+        <td>3,437</td>
+        <td>86,954</td>
+        <td>6,111</td>
+      </tr>
+    </tfoot>
+  </table>
 </body>
 </html>
