--- a/exam09.html
+++ b/exam09.html
@@ -1,81 +1,89 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>연습문제 3번</title>
+  <title>상품 소개 페이지</title>
   <style>
-    #order {
-      width: 1000px;
-      margin: 0 auto;
+    table, th, td {
+      border:1px solid #ccc;
+      border-collapse: collapse;
     }
-    label {
-      display: inline-block;
-      width: 100px;
-      margin-bottom: 8px;
-    }
-    input {
-      width: 300px;
-      height: 24px;
-      margin-bottom: 10px;
-    }
-    input[type="date"] {
-      width: 150px;
-    }
-    button {
-      width: 150px;
-      height: 40px;
-      margin-left: 10px;
-      margin-right: 10px;
-    }
-    .btn {
-      margin-top: 20px;
-      display: flex;
-      justify-content: center;
-    }
-    span {
-      font-size: 80%;
+    th, td { 
+      padding:10px 20px; 
     }
   </style>
 </head>
 <body>
-  <div id="order">
-    <h1>아이패드 주문하기</h1>
-    <form action="#">
-      <fieldset>
-        <legend>배송 정보</legend>
-        <div>
-          <label for="product">주문 상품</label>
-          <input type="text" id="product" value="아이패드 12.9인치" readonly>
-        </div>
-        <div>
-          <label for="name">이름</label>
-          <input type="text" id="name" autofocus>
-        </div>
-        <div>
-          <label for="address">배송 주소</label>
-          <input type="text" id="address" required>
-        </div>
-        <div>
-          <label for="mail">이메일</label>
-          <input type="text" id="mail">
-        </div>
-        <div>
-          <label for="tel">연락처</label>
-          <input type="text" id="tel" placeholder="하이픈 빼고 입력해 주세요.(01012345678)">
-        </div>
-        <div>
-          <label for="date">배송일 지정</label>
-          <input type="date" id="date">
-          <span>(주문일로부터 최소 3일 이후)</span>
-        </div>
-      </fieldset>
-      <div class="btn">
-        <button type="submit">주문하기</button>
-        <button type="submit">취소하기</button>
-      </div>
-    </form>
+  <div id="container">
+    <img src="images/tangerines.jpg" alt="레드향">
+    <ul>
+      <li><a href="#info">레드향</a></li>
+      <li><a href="#recipe">레드향 샐러드 레시피</a></li>
+      <li><a href="#product">상품 구성</a></li>
+    </ul>
+
+    <h1 id="info">레드향</h1>
+    <p>껍질에 붉은 빛이 돌아 <strong>레드향</strong>이라 불린다.</p>
+    <p>레드향은 <em>한라봉과 귤을 교배</em>한 것으로<br>일반 귤보다 2~3배 크고, 과육이 붉고 통통하다.</p>
+    <p>비타민 C와 비타민 P가 풍부해<br> <strong>혈액순환, 감기예방</strong> 등에 좋은 것으로 알려져 있다.</p>
+
+    <h2 id="recipe">레드향 샐러드 레시피</h2>
+    <p><b>재료 : </b>레드향 1개, 아보카도 1개, 토마토 1개, 샐러드 채소 30g</p>
+    <p><b>드레싱 : </b>올리브유 1큰술, 레몬즙 2큰술, 꿀 1큰술, 소금 약간</p>
+    <ol>
+      <li>샐러드 채소를 씻고 물기를 제거한 후 준비합니다.</li>
+      <li>레드향과 아보카도, 토마토를 먹기 좋은 크기를 썰어둡니다.</li>
+      <li>드레싱 재료를 믹서에 갈아줍니다.</li>
+      <li>볼에 샐러드 채소와 썰어 둔 레드향, 아보카도, 토마토를 넣고 드레싱을 뿌리면 끝!</li>
+    </ol>
+    <video src="medias/salad.mp4" controls width="700"></video>
+    
+    <h2 id="product">상품 구성</h2>
+    <table>
+      <caption>선물용과 가정용 상품 구성</caption>
+      <colgroup>
+        <col style="background-color:#eee;">
+        <col>
+        <col span="2" style="width:150px">
+      </colgroup>
+      <thead>
+        <tr>
+          <th>용도</th>
+          <th>중량</th>
+          <th>갯수</t>
+          <th>가격</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td rowspan="2">선물용</td>
+          <td>3kg</td>
+          <td>11~16과</td>
+          <td>35,000원</td>
+        </tr>
+        <tr>
+          <td>5kg</td>
+          <td>18~26과</td>
+          <td>52,000원</td>
+        </tr>
+        <tr>
+          <td rowspan="2">가정용</td>
+          <td>3kg</td>
+          <td>11~16과</td>
+          <td>30,000원</td>
+        </tr>   
+        <tr>
+          <td>5kg</td>
+          <td>18~26과</td>
+          <td>47,000원</td>
+        </tr>
+      </tbody>        
+    </table>
+    <div>     
+      <h2>주문하기</h2>      
+      <p><a href="#">주문서 작성하기</a></p>
+    </div>
   </div>
 </body>
 </html>
