--- a/exam10.html
+++ b/exam10.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>회원가입 폼</title>
-  <link href="https://fonts.googleapis.com/earlyaccess/nanumgothic.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
-      font-family: 'Nanum Gothic', sans-serif;
       background-color: #f8f9fa;
     }
 
@@ -34,27 +32,26 @@
 </head>
 
 <body>
-  <p>구글 나눔고딕, font-awesome, bootstrap 사용</p>
   <div class="signup-form">
     <h2><i class="fas fa-user-plus"></i> 회원가입</h2>
     <form>
       <div class="mb-3">
-        <label for="username" class="form-label"><i class="fas fa-user"></i> 아이디</label>
+        <label for="username" class="form-label"><i class="fas fa-user"></i> username</label>
         <input type="text" class="form-control" id="username" placeholder="아이디를 입력하세요" required>
       </div>
 
       <div class="mb-3">
-        <label for="password" class="form-label"><i class="fas fa-lock"></i> 비밀번호</label>
+        <label for="password" class="form-label"><i class="fas fa-lock"></i> password</label>
         <input type="password" class="form-control" id="password" placeholder="비밀번호를 입력하세요" required>
       </div>
 
       <div class="mb-3">
-        <label for="email" class="form-label"><i class="fas fa-envelope"></i> 이메일</label>
+        <label for="email" class="form-label"><i class="fas fa-envelope"></i> email</label>
         <input type="email" class="form-control" id="email" placeholder="이메일을 입력하세요" required>
       </div>
 
       <div class="mb-3">
-        <label for="birthdate" class="form-label"><i class="fas fa-calendar-alt"></i> 생일</label>
+        <label for="birthdate" class="form-label"><i class="fas fa-calendar-alt"></i> birthday</label>
         <input type="date" class="form-control" id="birthdate" required>
       </div>
       
